--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div>
 
         <!-- Shop Link -->
-        <a href="https://www.wearthegospel.com" class="link">Shop the Apparel</a>
+        <a href="https://www.wearhopeloom.com" class="link">Shop the Apparel</a>
     </div>
 
     <script>
